tests/fixtures/pass/prelude_option_none.sali
let main(): i32 = {
  let value: Option(i32) = Option(_).None
  value match {
    Some(_) => 0,
    None => 42,
  }
}
